--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,15 @@
       }
     ],
     "require": {
-        "php": ">=5.5.9",
-        "illuminate/support": "5.2.*",
-        "illuminate/console": "5.2.*",
-        "illuminate/filesystem": "5.2.*"
+        "php": ">= 7.1.3",
+        "illuminate/support": "5.8.*",
+        "illuminate/console": "5.8.*",
+        "illuminate/filesystem": "5.8.*"
     },
     "require-dev": {
-        "mockery/mockery": "0.9.*",
+        "mockery/mockery": "^1.0",
         "orchestra/testbench": "~3.0",
-        "phpunit/phpunit": "~4.0"
+        "phpunit/phpunit": "^7.5"
     },
     "autoload": {
         "psr-4": {
